Update all bower dependencies and mange bootstrap-daterangepicker with bower to fix #2

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <title>Speed Test Stats</title>
     <!-- css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/daterangepicker.css">
+    <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css">
 
     <!-- js -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/chart.js/dist/Chart.js"></script>
     <script src="bower_components/moment/min/moment-with-locales.min.js"></script>
-    <script src="js/libs/daterangepicker.js"></script>
+    <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="bower_components/papaparse/papaparse.min.js"></script>
 
     <!-- custom -->
