migrating from bower to yarn

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <head>
     <title>Speed Test Stats</title>
     <!-- css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-daterangepicker/daterangepicker.css">
 
     <!-- js -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/chart.js/dist/Chart.js"></script>
-    <script src="bower_components/moment/min/moment-with-locales.min.js"></script>
-    <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
-    <script src="bower_components/papaparse/papaparse.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/chart.js/dist/Chart.js"></script>
+    <script src="node_modules/moment/min/moment-with-locales.min.js"></script>
+    <script src="node_modules/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="node_modules/papaparse/papaparse.min.js"></script>
 
     <!-- custom -->
     <script type="text/javascript" src="js/appConfig.js"></script>
