remove max-height for canvas to fix a compression problem

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input id="daterange" type="text" class="form-control" name="daterange" />
         </div>
 
-        <canvas id="speedChart" style="max-height:73vh;"></canvas>
+        <canvas id="speedChart"></canvas>
     </div>
 </div>
 </body>
