#4 - add "start manual speedtest" button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="card" style="border-bottom: 0;">
     <div class="card-header">
-        Statistics
+        Statistics <button class="btn btn-outline-info float-right btn-sm">start manual speedtest</button>
     </div>
     <div class="card-body">
         <h4 class="card-title">
