--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
         <canvas id="speedChart"></canvas>
     </div>
+    <div class="small text-right">
+        v1.2
+    </div>
 </div>
 </body>
 </html>
