add custom title option; add option to overwrite appConfig with data volume

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 
     <!-- custom -->
-    <script type="text/javascript" src="js/appConfig.js"></script>
+    <script type="text/javascript" src="js/appConfig.example.js"></script>
+    <script type="text/javascript" src="data/appConfig.js"></script>
     <script type="text/javascript" src="js/evaluation.js"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
@@ -27,7 +28,7 @@
 
 <div class="card" style="border-bottom: 0;">
     <div class="card-header">
-        Statistics <button id="startSpeedtest" data-original-text="start manual speedtest" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> running ..." class="btn btn-outline-info float-right btn-sm">start manual speedtest</button>
+        <span id="title">Statistics</span> <button id="startSpeedtest" data-original-text="start manual speedtest" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> running ..." class="btn btn-outline-info float-right btn-sm">start manual speedtest</button>
     </div>
     <div class="card-body">
         <h4 class="card-title">
