changed popper.js integration from node to umd

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="node_modules/popper.js/dist/popper.min.js"></script>
+    <script type="text/javascript" src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/chart.js/dist/Chart.js"></script>
     <script src="node_modules/moment/min/moment-with-locales.min.js"></script>
