add rolling averages

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
         <canvas id="speedChart"></canvas>
     </div>
+    <div id="stats" style="display: flex;">
+
+    </div>
     <div class="small text-right">
         v1.3
     </div>
